fs-depend/metadata/objects/Shout_Out__c.object
<CustomObject>
    <description>Thanks someone for their help or support</description>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Anything else to add?</description>
        <label>Comments</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity that the shout out is being given for</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shout Outs</relationshipLabel>
        <relationshipName>Shout_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Reason for the Shout Out</description>
        <label>Reason</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Receiver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Person receiving the Shout Out</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Shout_Outs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Shout Out</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SO-{0000}</displayFormat>
        <label>Shout Out Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shout Outs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>